@@ -263,7 +263,7 @@ ostream &
 operator <<(ostream & out, const Cell & cell)
 {
 PrintBuffer pb = cell.character_representation(PR_BOXED_GRAPHIC);
-UCS_string ucs(pb, 0);
+UCS_string ucs(pb, 0, Workspace::get_PW());
    return out << ucs << " ";
 }
 //-----------------------------------------------------------------------------
